push tx example

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "bip38": "^2.0.2",
     "bitcoinjs-lib": "^3.3.2",
     "dhttp": "^2.4.2",
+    "q": "^1.5.1",
+    "url-join": "^4.0.0",
+    "url-pattern": "^1.0.3",
     "wif": "^2.0.6"
   }
 }
